src/main/java/uk/co/jackoftrades/backend/io/parsers/antlr/projectionreader/ProjectionReaderParser.java
// Generated from C:/Users/rowan/Documents/IntelliJProjects/Angband.4.2.6/src/main/java/uk/co/jackoftrades/background/io/parsers/antlr/grammars/ProjectionReader.g4 by ANTLR 4.13.2
package uk.co.jackoftrades.backend.io.parsers.antlr.projectionreader;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import uk.co.jackoftrades.backend.colour.enums.ColourType;
import uk.co.jackoftrades.backend.numerics.Random;
import uk.co.jackoftrades.middle.combat.enums.ProjectionEnum;
import uk.co.jackoftrades.middle.combat.enums.ProjectionType;
import uk.co.jackoftrades.middle.enums.MessageEnum;
import uk.co.jackoftrades.middle.game.Projection;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProjectionReaderParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, COMMENT = 6, EOL = 7, CODE = 8, NAME = 9,
            TYPE = 10, DESC = 11, PLAYER_DESC = 12, BLIND_DESC = 13, LASH_DESC = 14, NUMERATOR = 15,
            DENOMINATOR = 16, DIVISOR = 17, DAMAGE_CAP = 18, MSGT = 19, OBVIOUS = 20, WAKE = 21,
            COLOUR = 22, UCASE = 23, LWORDS = 24, LCASE = 25, TCASE = 26, NUMBER = 27;
    public static final int
            RULE_code = 0, RULE_name = 1, RULE_type = 2, RULE_desc = 3, RULE_playerDesc = 4,
            RULE_blindDesc = 5, RULE_lashDesc = 6, RULE_numerator = 7, RULE_dice = 8,
            RULE_denominator = 9, RULE_divisor = 10, RULE_damageCap = 11, RULE_msgt = 12,
            RULE_obvious = 13, RULE_wake = 14, RULE_colour = 15, RULE_projection = 16,
            RULE_file = 17;

    private static String[] makeRuleNames() {
        return new String[]{
                "code", "name", "type", "desc", "playerDesc", "blindDesc", "lashDesc",
                "numerator", "dice", "denominator", "divisor", "damageCap", "msgt", "obvious",
                "wake", "colour", "projection", "file"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'element'", "'environs'", "'monster'", "'+'", "'d'", null, null,
                "'code:'", "'name:'", "'type:'", "'desc:'", "'player-desc:'", "'blind-desc:'",
                "'lash-desc:'", "'numerator:'", "'denominator:'", "'divisor:'", "'damage-cap:'",
                "'msgt:'", "'obvious:'", "'wake:'", "'color:'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, "COMMENT", "EOL", "CODE", "NAME",
                "TYPE", "DESC", "PLAYER_DESC", "BLIND_DESC", "LASH_DESC", "NUMERATOR",
                "DENOMINATOR", "DIVISOR", "DAMAGE_CAP", "MSGT", "OBVIOUS", "WAKE", "COLOUR",
                "UCASE", "LWORDS", "LCASE", "TCASE", "NUMBER"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "ProjectionReader.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public ProjectionReaderParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CodeContext extends ParserRuleContext {
        public ProjectionEnum projectionCode;
        public Token UCASE;

        public TerminalNode CODE() {
            return getToken(ProjectionReaderParser.CODE, 0);
        }

        public TerminalNode UCASE() {
            return getToken(ProjectionReaderParser.UCASE, 0);
        }

        public CodeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_code;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).enterCode(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitCode(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitCode(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CodeContext code() throws RecognitionException {
        CodeContext _localctx = new CodeContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_code);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(36);
                match(CODE);
                setState(37);
                ((CodeContext) _localctx).UCASE = match(UCASE);

                String projectionEnumString = "PROJ_" + ((CodeContext) _localctx).UCASE.getText();
                ((CodeContext) _localctx).projectionCode = ProjectionEnum.valueOf(projectionEnumString);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NameContext extends ParserRuleContext {
        public String projectionName;
        public Token LWORDS;

        public TerminalNode NAME() {
            return getToken(ProjectionReaderParser.NAME, 0);
        }

        public TerminalNode LWORDS() {
            return getToken(ProjectionReaderParser.LWORDS, 0);
        }

        public NameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).enterName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitName(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitName(this);
            else return visitor.visitChildren(this);
        }
    }

    public final NameContext name() throws RecognitionException {
        NameContext _localctx = new NameContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(40);
                match(NAME);
                setState(41);
                ((NameContext) _localctx).LWORDS = match(LWORDS);

                ((NameContext) _localctx).projectionName = ((NameContext) _localctx).LWORDS.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TypeContext extends ParserRuleContext {
        public ProjectionType projectionType;
        public Token res;

        public TerminalNode TYPE() {
            return getToken(ProjectionReaderParser.TYPE, 0);
        }

        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).enterType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                match(TYPE);
                setState(45);
                ((TypeContext) _localctx).res = _input.LT(1);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0))) {
                    ((TypeContext) _localctx).res = (Token) _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }

                String projectionTypeString = "PT_" + ((TypeContext) _localctx).res.getText().toUpperCase();
                ((TypeContext) _localctx).projectionType = ProjectionType.valueOf(projectionTypeString);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DescContext extends ParserRuleContext {
        public String description;
        public Token LWORDS;

        public TerminalNode DESC() {
            return getToken(ProjectionReaderParser.DESC, 0);
        }

        public TerminalNode LWORDS() {
            return getToken(ProjectionReaderParser.LWORDS, 0);
        }

        public DescContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_desc;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).enterDesc(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitDesc(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitDesc(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DescContext desc() throws RecognitionException {
        DescContext _localctx = new DescContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_desc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(48);
                match(DESC);
                setState(49);
                ((DescContext) _localctx).LWORDS = match(LWORDS);

                ((DescContext) _localctx).description = ((DescContext) _localctx).LWORDS.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PlayerDescContext extends ParserRuleContext {
        public String playerDescription;
        public Token LWORDS;

        public TerminalNode PLAYER_DESC() {
            return getToken(ProjectionReaderParser.PLAYER_DESC, 0);
        }

        public TerminalNode LWORDS() {
            return getToken(ProjectionReaderParser.LWORDS, 0);
        }

        public PlayerDescContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_playerDesc;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener)
                ((ProjectionReaderListener) listener).enterPlayerDesc(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener)
                ((ProjectionReaderListener) listener).exitPlayerDesc(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitPlayerDesc(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PlayerDescContext playerDesc() throws RecognitionException {
        PlayerDescContext _localctx = new PlayerDescContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_playerDesc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(52);
                match(PLAYER_DESC);
                setState(53);
                ((PlayerDescContext) _localctx).LWORDS = match(LWORDS);

                ((PlayerDescContext) _localctx).playerDescription = ((PlayerDescContext) _localctx).LWORDS.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BlindDescContext extends ParserRuleContext {
        public String blindDescription;
        public Token LWORDS;

        public TerminalNode BLIND_DESC() {
            return getToken(ProjectionReaderParser.BLIND_DESC, 0);
        }

        public TerminalNode LWORDS() {
            return getToken(ProjectionReaderParser.LWORDS, 0);
        }

        public BlindDescContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_blindDesc;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener)
                ((ProjectionReaderListener) listener).enterBlindDesc(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitBlindDesc(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitBlindDesc(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlindDescContext blindDesc() throws RecognitionException {
        BlindDescContext _localctx = new BlindDescContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_blindDesc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(56);
                match(BLIND_DESC);
                setState(57);
                ((BlindDescContext) _localctx).LWORDS = match(LWORDS);

                ((BlindDescContext) _localctx).blindDescription = ((BlindDescContext) _localctx).LWORDS.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class LashDescContext extends ParserRuleContext {
        public String lashDescription;
        public Token LWORDS;

        public TerminalNode LASH_DESC() {
            return getToken(ProjectionReaderParser.LASH_DESC, 0);
        }

        public TerminalNode LWORDS() {
            return getToken(ProjectionReaderParser.LWORDS, 0);
        }

        public LashDescContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_lashDesc;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).enterLashDesc(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitLashDesc(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitLashDesc(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LashDescContext lashDesc() throws RecognitionException {
        LashDescContext _localctx = new LashDescContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_lashDesc);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                match(LASH_DESC);
                setState(61);
                ((LashDescContext) _localctx).LWORDS = match(LWORDS);

                ((LashDescContext) _localctx).lashDescription = ((LashDescContext) _localctx).LWORDS.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NumeratorContext extends ParserRuleContext {
        public int num;
        public Token NUMBER;

        public TerminalNode NUMERATOR() {
            return getToken(ProjectionReaderParser.NUMERATOR, 0);
        }

        public TerminalNode NUMBER() {
            return getToken(ProjectionReaderParser.NUMBER, 0);
        }

        public NumeratorContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_numerator;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener)
                ((ProjectionReaderListener) listener).enterNumerator(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitNumerator(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitNumerator(this);
            else return visitor.visitChildren(this);
        }
    }

    public final NumeratorContext numerator() throws RecognitionException {
        NumeratorContext _localctx = new NumeratorContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_numerator);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                match(NUMERATOR);
                setState(65);
                ((NumeratorContext) _localctx).NUMBER = match(NUMBER);

                ((NumeratorContext) _localctx).num = Integer.parseInt(((NumeratorContext) _localctx).NUMBER.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DiceContext extends ParserRuleContext {
        public Random die;
        public Token base;
        public Token diceType;
        public Token sides;

        public List<TerminalNode> NUMBER() {
            return getTokens(ProjectionReaderParser.NUMBER);
        }

        public TerminalNode NUMBER(int i) {
            return getToken(ProjectionReaderParser.NUMBER, i);
        }

        public DiceContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dice;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).enterDice(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitDice(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitDice(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DiceContext dice() throws RecognitionException {
        DiceContext _localctx = new DiceContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_dice);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                ((DiceContext) _localctx).base = match(NUMBER);
                setState(69);
                match(T__3);
                setState(70);
                ((DiceContext) _localctx).diceType = match(NUMBER);
                setState(71);
                match(T__4);
                setState(72);
                ((DiceContext) _localctx).sides = match(NUMBER);

                ((DiceContext) _localctx).die = new Random(
                        Integer.parseInt(((DiceContext) _localctx).base.getText()), 1,
                        Integer.parseInt(((DiceContext) _localctx).diceType.getText()),
                        Integer.parseInt(((DiceContext) _localctx).sides.getText()), false);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DenominatorContext extends ParserRuleContext {
        public int den;
        public Random denDice;
        public boolean isDice;
        public Token NUMBER;
        public DiceContext dice;

        public TerminalNode DENOMINATOR() {
            return getToken(ProjectionReaderParser.DENOMINATOR, 0);
        }

        public TerminalNode NUMBER() {
            return getToken(ProjectionReaderParser.NUMBER, 0);
        }

        public DiceContext dice() {
            return getRuleContext(DiceContext.class, 0);
        }

        public DenominatorContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_denominator;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener)
                ((ProjectionReaderListener) listener).enterDenominator(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener)
                ((ProjectionReaderListener) listener).exitDenominator(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitDenominator(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DenominatorContext denominator() throws RecognitionException {
        DenominatorContext _localctx = new DenominatorContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_denominator);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(75);
                match(DENOMINATOR);
                setState(78);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                    case 1: {
                        setState(76);
                        ((DenominatorContext) _localctx).NUMBER = match(NUMBER);
                    }
                    break;
                    case 2: {
                        setState(77);
                        ((DenominatorContext) _localctx).dice = dice();
                    }
                    break;
                }

                if (((DenominatorContext) _localctx).NUMBER == null) {
                    ((DenominatorContext) _localctx).denDice = ((DenominatorContext) _localctx).dice.die;
                    ((DenominatorContext) _localctx).isDice = true;
                    ((DenominatorContext) _localctx).den = -1;
                } else {
                    ((DenominatorContext) _localctx).den = Integer.parseInt(((DenominatorContext) _localctx).NUMBER.getText());
                    ((DenominatorContext) _localctx).isDice = false;
                    ((DenominatorContext) _localctx).denDice = null;
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DivisorContext extends ParserRuleContext {
        public int div;
        public Token NUMBER;

        public TerminalNode DIVISOR() {
            return getToken(ProjectionReaderParser.DIVISOR, 0);
        }

        public TerminalNode NUMBER() {
            return getToken(ProjectionReaderParser.NUMBER, 0);
        }

        public DivisorContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_divisor;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).enterDivisor(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ProjectionReaderListener) ((ProjectionReaderListener) listener).exitDivisor(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ProjectionReaderVisitor)
                return ((ProjectionReaderVisitor<? extends T>) visitor).visitDivisor(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DivisorContext divisor() throws RecognitionException {
        DivisorContext _localctx = new DivisorContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_divisor);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                match(DIVISOR);
                setState(83);
                ((DivisorContext) _localctx).NUMBER = match(NUMBER);

                ((DivisorContext) _localctx).div = Integer.parseInt(((DivisorContext) _localctx).NUMBER.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DamageCapContext extends ParserRuleContext {
        public int damCap;
        public Token NUMBER;

        public TerminalNode DAMAGE_CAP() {
            return getToken(ProjectionReaderParser.DAMAGE_CAP, 0);
        }

        public TerminalNode NUMBER() {
            return getToken(ProjectionReaderParser.NUMBER, 0);
        }
